[gd_scene load_steps=7 format=3 uid="uid://dpj0isuxk7174"]

[ext_resource type="Script" uid="uid://d26vvdpyydwn8" path="res://scripts/MenuPausa.gd" id="1_8tpr8"]
[ext_resource type="Texture2D" uid="uid://cmd1opiiuwsp6" path="res://assets/interface/menu/CircleVsRectanglesTitulo.png" id="2_0jb3j"]
[ext_resource type="FontFile" uid="uid://bqx7fkovc5nlj" path="res://tipografia/StiffNeck-pZzd.ttf" id="3_2rsnl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j8buq"]
bg_color = Color(0.21568628, 0.8509804, 0.54901963, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_46crp"]
bg_color = Color(0.7764706, 0.7019608, 0.20392157, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dxkvl"]
bg_color = Color(0.9254902, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -186.0
offset_bottom = -109.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8tpr8")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 648.0

[node name="Continuar" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -205.0
offset_top = -234.5
offset_right = 207.0
offset_bottom = -174.5
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_2rsnl")
theme_override_font_sizes/font_size = 46
theme_override_styles/normal = SubResource("StyleBoxFlat_j8buq")
text = "CONTINUAR"

[node name="Reiniciar" type="Button" parent="Panel"]
layout_mode = 1
offset_left = 371.0
offset_top = 486.5
offset_right = 783.0
offset_bottom = 546.5
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_2rsnl")
theme_override_font_sizes/font_size = 46
theme_override_styles/normal = SubResource("StyleBoxFlat_46crp")
text = "REINICIAR
"

[node name="Sair" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -206.0
offset_top = -88.5
offset_right = 206.0
offset_bottom = -28.5
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_2rsnl")
theme_override_font_sizes/font_size = 46
theme_override_styles/normal = SubResource("StyleBoxFlat_dxkvl")
text = "MENU PRINCIPAL"

[node name="Titulo" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = 276.0
offset_top = 47.0
offset_right = 876.0
offset_bottom = 317.0
texture = ExtResource("2_0jb3j")

[connection signal="pressed" from="Panel/Continuar" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="Panel/Reiniciar" to="." method="_on_reiniciar_pressed"]
[connection signal="pressed" from="Panel/Sair" to="." method="_on_sair_pressed"]
